# sc-extract

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  utils.rs
src/extractors/: csv.rs  sc.rs  tex.rs
