[package]
name = "sc_extract"
version = "1.1.0"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A command-line tool to extract graphics and csv files from Supercell games."
homepage = "https://github.com/AriusX7/sc-extract"
repository = "https://github.com/AriusX7/sc-extract"
keywords = ["supercell", "brawlstars", "sc", "clashroyale", "clashofclans"]
categories = ["command-line-utilities"]
exclude = [
    "tests/*"
]

[[bin]]
name = "sce"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
byteorder = "1.3.4"
lzma-rs = "0.2.0"
image = "0.23.10"
colored = "2.0.0"
rayon = "1.5.0"
imageproc = "0.22.0"
conv = "0.3.3"
hex = "0.4.2"
zstd = "0.8.0"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
lzham = "0.1.1"
